--- a/.editorconfig
+++ b/.editorconfig
@@ -5,13 +5,30 @@
 
 root = true
 
-## Configurations
-#################
+## Repository Configurations
+############################
 [.{git*,editorconfig,*.yml}]
 indent_style = space
 indent_size = unset
 end_of_line = lf
 charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+
+## Plain-Text Files
+###################
+[*.txt]
+indent_style = space
+indent_size = unset
+end_of_line = unset
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[{LICENSE,README}]
+indent_size = unset
+indent_style = space
+end_of_line = unset
 trim_trailing_whitespace = true
 insert_final_newline = true
 
@@ -38,9 +55,9 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 
-## Markdown GFM
-###############
-[*.md]
+## Markdown GFM/Pandoc
+######################
+[*.{md,markdown}]
 indent_style = space
 indent_size = unset
 end_of_line = unset
@@ -48,5 +65,42 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+
+## PP Macros
+############
+[*.pp]
+indent_style = space
+indent_size = unset
+end_of_line = unset
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+
+## Sass/SCSS
+############
+[*.{sass,scss}]
+indent_size = 2
+indent_style = space
+end_of_line = unset
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+; C-style doc comments:
+block_comment_start = /*
+block_comment = *
+block_comment_end = */
+
+
+## Highlight Assets
+###################
+[*.{lang,theme}]
+indent_style = space
+indent_size = unset
+end_of_line = unset
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
 
 # EOF #
