Switch to Dart Sass
Stop using Ruby Sass (defunct) and use Dart Sass instead:

- In `docs-src/assets/`:
    + Delete `SASS-BUILD.bat` and `SASS-WATCH.bat`, which no longer
      worked with the Dart implementation of Sass.
    + Replace them with `build.sh` and `watch.sh`, so that we might
      use them for Tavis CI testing.
    + Rebuild `polyman.css` using Dart Sass (slight changes).
- In `docs-src/README.md` add Dart Sass to the section on optional
  dependencies, and mention the Sass switch.
- Update `.gitattributes` and enforce `LF` EOLs on generated CSS files.
- Amend `.gitignore`:
    + Remove `.sass-cache` entry (no longer needed with Dart Sass).
    + Exclude generated CSS maps (`*.css.map`) from repository.
- Stop tracking Sass generated CSS maps (`polyman.css.map`).

This commit resolves #20.

--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,24 @@
 #  https://github.com/tajmone/polygen-docs  #
 #############################################
 
+## Misc Work Files
+##################
+
+# Temporary/backup or removed files and folders:
+___*
+___*.*
+
+# Links and URLs
+*.lnk
+*.url
+
 ## Polygen Compiled Grammars
 ############################
 *.grm.o
 
-## Windows Binaries
-###################
-*.exe
-
-## Sass Cache Folder
-####################
-.sass-cache
+## Sass-generated CSS maps
+##########################
+*.css.map
 
 ## Tools Subfolder
 ##################
